--- a/style.css
+++ b/style.css
@@ -63,3 +63,11 @@ h1 {
     background-color: #45a049;
 }
 
+.options {
+    display: flex;
+    justify-content: space-around;
+    flex-wrap: wrap;
+    gap: 20px;
+    margin-bottom: 20px;
+}
+
